# code-inspector

./: .yarnrc.yml  404.html  Cargo.toml  README.md  __next.__PAGE__.txt  __next._full.txt  __next._head.txt  __next._tree.txt  _not-found.html  _not-found.txt  about.html  about.txt  code-inspector.code-workspace  configuration.html  configuration.txt  guide.html  guide.txt  index.html  integrations.html  integrations.txt  package.json  showcase.html  showcase.txt
.changeset/: blue-lies-argue.md  curvy-dots-pay.md  good-ears-relate.md  lemon-words-hug.md  shaky-teams-win.md  shiny-gifts-raise.md  violet-pants-fold.md
.github/workflows/: ci-inspector-babel-plugin.yml  ci-inspector-swc-plugin.yml  ci-inspector.yml  ci-integrity.yml  gh-pages.yml  release-or-version-pr.yml
_not-found/: __next._full.txt  __next._head.txt  __next._not-found.__PAGE__.txt  __next._tree.txt
_pagefind/: pagefind-entry.json  pagefind.en_f29c888e49.pf_meta
_pagefind/fragment/: en_13c051c.pf_fragment  en_22f5fbe.pf_fragment  en_30cc7d7.pf_fragment  en_336b454.pf_fragment  en_38db144.pf_fragment  en_38f8b03.pf_fragment  en_66dce9e.pf_fragment  en_6faa7aa.pf_fragment  en_7068ab9.pf_fragment  en_7f9aee1.pf_fragment  en_8649c87.pf_fragment  en_86c58fe.pf_fragment  en_957f6ed.pf_fragment  en_a8979fb.pf_fragment  en_aef5cda.pf_fragment  en_bfae84e.pf_fragment  en_c9f0351.pf_fragment  en_e389bc2.pf_fragment
_pagefind/index/: en_1a85d26.pf_index
about/: __next._full.txt  __next._head.txt  __next._tree.txt  __next.about.__PAGE__.txt
assets/css/: styles.3ab9263b.css  styles.962425a3.css  styles.be86ed0b.css
assets/js/: 0e384e19.230ae0b4.js  0e384e19.4d1a6518.js  0e384e19.584d0384.js  0e384e19.f1c6bf91.js  140.c6cd3800.js  17896441.0c30e6cf.js  17896441.10eb5fd7.js  17896441.1f9c5804.js  17896441.78c5b322.js  17896441.898ac4c6.js  190.a2dbae31.js  190.b481405b.js  1a4e3797.307f9768.js  1a4e3797.56ac051a.js  1a4e3797.67b13d9f.js  1a4e3797.6ee0cff3.js  1a4e3797.e1b5973e.js  1be6b01a.1b3e2567.js  1be6b01a.59436b05.js  1be6b01a.90eee59d.js  (+85 more)
configuration/: __next._full.txt  __next._head.txt  __next._tree.txt  __next.configuration.__PAGE__.txt  babel-plugin.html  babel-plugin.txt  inspector-component.html  inspector-component.txt  middleware.html  middleware.txt  next-plugin.html  next-plugin.txt  swc-plugin.html  swc-plugin.txt
guide/: __next._full.txt  __next._head.txt  __next._tree.txt  __next.guide.__PAGE__.txt  getting-started.html  getting-started.txt  how-it-works.html  how-it-works.txt  introduction.html  troubleshooting.html  troubleshooting.txt
integrations/: __next._full.txt  __next._head.txt  __next._tree.txt  __next.integrations.__PAGE__.txt  nextjs.html  nextjs.txt  rspack.html  rspack.txt  vite.html  vite.txt  webpack.html  webpack.txt
markdown-page/: index.html
search/: index.html
showcase/: __next._full.txt  __next._head.txt  __next._tree.txt  __next.showcase.__PAGE__.txt
website/: eslint.config.js  package.json  tsconfig.json
(+141 files in other folders)
