[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
authors            = ["Yingchun Tian"]
edition            = "2021"
license            = "MIT"
homepage           = "https://gitlab.itcjf.com/flatjs-next/took-kits"
repository         = "https://gitlab.itcjf.com/flatjs-next/took-kits"
rust-version       = "1.70"

[workspace.dependencies]
cow-utils          = { version = "0.1.3" }
heck               = { version = "0.5.0" }
json               = { version = "0.12.4" }
rustc-hash         = { version = "2.1.0" }
tracing-subscriber = { version = "0.3.19" }
pathdiff           = { version = "0.2.3" }
serde              = { version = "1.0.225", default-features = false, features = ["derive"] }
serde_json         = { version = "1.0.145", default-features = false, features = ["std"] }
tracing            = { version = "0.1.41", features = ["max_level_trace", "release_max_level_trace"] }

# Must be pinned with the same swc versions
swc                         = { version = "52.0.0", default-features = false }
swc_common                  = { version = "18.0.1", default-features = false }
swc_config                  = { version = "3.1.2" , default-features = false}
swc_core                    = { version = "54.0.0", default-features = false, features = ["parallel_rayon"] }
swc_ecma_minifier           = { version = "42.0.0", default-features = false }
swc_error_reporters         = { version = "20.0.0", default-features = false }
swc_html                    = { version = "30.0.0", default-features = false}
swc_html_minifier           = { version = "42.0.0", default-features = false }
swc_node_comments           = { version = "18.0.0", default-features = false}
swc_parallel                = { version = "1.3.0", default-features = false, features = ["rayon"] }
swc_ecma_ast                = { version = "19.0.0", default-features = false}
swc_ecma_utils              = { version = "25.0.0", default-features = false}
swc_ecma_visit              = { version = "19.0.0", default-features = false}
swc_plugin_macro            = { version = "1.1.0", default-features = false }
swc_atoms                   = { version = "9.0.0", default-features = false}
swc_cached                  = { version = "2.0.0", default-features = false}
swc_ecma_transforms_react   = { version = "38.0.0", default-features = false}
swc_ecma_transforms_testing = { version = "38.0.0", default-features = false}
swc_trace_macro             = { version = "2.0.0", default-features = false}
testing                     = { version = "19.0.0", default-features = false}
convert_case                = { version = "0.10.0", default-features = false}
handlebars                  = { version = "6.3.2", default-features = false}

[profile.release]
codegen-units = 1
# debug = true
lto = true

# Optimize for size
opt-level = "s"

# Strip debug symbols
strip = "symbols"
